--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -6,3 +6,12 @@
 .btn-menu :hover {
   background: black;
 }
+
+.btn-mg-top {
+  margin-top: 70px;
+}
+
+a.link-white {
+  color: red;
+  margin-top: 25px
+}
