--- a/app/assets/stylesheets/components/_flexbox.scss
+++ b/app/assets/stylesheets/components/_flexbox.scss
@@ -9,13 +9,26 @@
 
 .vl {
     border-left: 1px dotted red;
-    height: 350px;
+    height: 200px;
     position: absolute;
     right: 0;
     margin-left: -3px;
     top: 0;
     width: 3px;
 }
+
+.aboutme {
+  color: white;
+}
+
+.myexp {
+  color: white;
+}
+
+.certifications {
+  color: white;
+}
+
 
 
 
