--- a/app/views/pages/certification.html.erb
+++ b/app/views/pages/certification.html.erb
@@ -1,5 +1,5 @@
 <div class="container" style="background-color: #1b1b1c;">
-  <h1>My certifications</h1>
+  <div style="color: red;"><h1>My certifications</h1></div>
   <div class="container-certification">
     <div class="certification-item">
       <div class="certification-point"></div>
@@ -11,11 +11,9 @@
           <div class="location">Marseille, France</div>
         </div>
         <div class="col">
-          learning HTML, CSS, Bootsrap, JavaScript, jQuery, SQL, git, Github, Heroku and Ruby on Rails.
+          "Learning HTML, CSS, Bootsrap, JavaScript, jQuery, SQL, git, Github, Heroku and Ruby on Rails.
           <br/>
-          clone of AirBnB
-          <br/>
-          a Rails prototype named UrbanTraining.eu
+          Clone of AirBnB and a Rails prototype named UrbanTraining.eu"
         </div>
       </div>
     </div>
@@ -32,17 +30,18 @@
           <div class="location">Aix-en-Provence, France</div>
         </div>
         <div class="col">
-          tronc commun, physiologie, bio mécanique, histoire du sport, psycho-pédagogie, réglementation
+          "Common core, physiology, bio mechanics, sport's history, psycho-pedagogy, sport's regulation
           <br/>
-          Sépcialisation Athlétisme
+          Athletic specialisation"
         </div>
       </div>
     </div>
     <br>
     <br>
     <br>
-      <%= link_to "back to menu", root_path, class: "btn btn-menu" %>
+      <%= link_to "back to home", root_path, class: "btn btn-menu" %>
       <%= link_to "more about me", about_path, class: "btn btn-menu" %>
-      <%= link_to "myExp", experience_path, class: "btn btn-menu" %>
+      <%= link_to "my experiences", experience_path, class: "btn btn-menu" %>
   </div>
 </div>
+
