--- a/app/views/pages/experience.html.erb
+++ b/app/views/pages/experience.html.erb
@@ -1,5 +1,5 @@
 <div class="container" style="background-color: #1b1b1c;">
-  <h1>My expriences</h1>
+  <div style="color: red;"><h1>My expriences</h1></div>
   <div class="container-experience">
     <div class="experience-item">
       <div class="experience-point"></div>
@@ -11,9 +11,9 @@
           <div class="location">Marseille, France</div>
         </div>
         <div class="col">
-          "Adapation d'un jeu de société/plateau en application web"
+          "Adaptation of a board game in web application
           <br/>
-          Ruby, Ror,CSS, HTML, JavaScript, React, Redux, Heroku
+          Ruby, RoR, CSS, HTML, JavaScript, React, Redux, Heroku"
         </div>
       </div>
     </div>
@@ -30,17 +30,17 @@
           <div class="location">Marseille, France</div>
         </div>
         <div class="col">
-          "Porteur du projet Urbantraining, permettant de visiter la ville tout en faisant du sport."
+          "leader of the Urbantraining project, allowing to visit the city while playing sports.
           <br/>
-          Ruby, RoR, CSS, HTML, JavaScript, Aajx, jQuery, Heroku
+          Ruby, RoR, CSS, HTML, JavaScript, Aajx, jQuery, Heroku"
         </div>
       </div>
     </div>
     <br>
     <br>
     <br>
-      <%= link_to "back to menu", root_path, class: "btn btn-menu" %>
+      <%= link_to "back to home", root_path, class: "btn btn-menu" %>
       <%= link_to "more about me", about_path, class: "btn btn-menu" %>
-      <%= link_to "my certif", certification_path, class: "btn btn-menu" %>
+      <%= link_to "my certifications", certification_path, class: "btn btn-menu" %>
   </div>
 <div>
