--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,6 +1,6 @@
 .container {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
@@ -27,11 +27,11 @@
 
 .container-certification {
   background-color: #1b1b1c;
-  height: 95vh;
+  height: 40vh;
 }
 
 .container-experience {
   margin-top: -5px;
   background-color: #1b1b1c;
-  height: 95vh;
+  height: 40vh;
 }
