--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,20 +2,17 @@
   <div class="about">
     <h1>More about me</h1>
     <br>
-    <p>My life has always been sport-driven since I was 10 years old, so my professional life has naturally focused on the sport, I have graduated as a sports educator in Aix-en-Provence. After a few years in the south of france i moved to switzerland where i worked for the campus of the nations and the canton of Geneva as a track and field referent for 2 years. when i came back to france i took the direction of the athletics section of the smuc for 2 years, it allows me to realize that i needed something new in my life. So I decided to reorient myself in the web development, because I need a completely different environment from the previous one but it's also necessary that this environment keeps me in constant intelectuelle awakening in order to avoid monotony. So I followed the formation of the wagon, in which i had the best training experience and because of that, i knew i wanted to work in this new environment. I keep a great sporting sensitivity i practice alot of cycling, climbing, running and trekking. This new balance allows me to perform well in my professional life</p>
-<!--       <p>Ma vie a toujours était dirigée par le sport depuis mes 10 ans, de ce fait ma vie professionnelle s'est naturellement orientée dans le sport, j'ai passé mon diplome d'éducateur sportif à Aix-en-provence (france).Après quelques années dans le sud de la France je suis partie en Suisse ou j'ai travaillé pour l'école international de Genève (campus des nations) et le canton de Genève en tant que référant athlétisme, pendant 2 ans. à mon retour en France j'ai pris la direction de la section athlétisme du smuc pendant 2 ans, cela ma permit de me rendre compte que j'avais besoin de noueauté dans ma vie.
-      J'ai donc décidé de me réorienter dans le développement web, car il me fallait un milieu complètement différent du précédent  mais il fallait également que ce milieu me maintienne en constant éveil intelectuelle afin d'éviter la monotonie.
-      J'ai donc suivi la formation du wagon, qui fût ma plus belle expérience formatrice et de ce fait, j'ai sû que je voulais travailler dans ce nouveau milieu. Je garde néanmoins une grande sensibilité sportive puisque je pratique réguliérement du cyclisme, de la course à pied (course semi longue et trail) ainsi que de l'escalade. Ce nouvel équilibre me permet d'être performant dans ma vie professionelle </p> -->
+    <p>My life has always been sport-driven since I was 10 years old, so my professional life has naturally focused on the sport, I have graduated as a sports educator in Aix-en-Provence. After a few years in the south of france i moved to switzerland where i worked for the campus of the nations and the canton of Geneva as a track and field referent for 2 years. when i came back to france i took the direction of the athletics section of the smuc for 2 years, it allows me to realize that i needed something new in my life. So I decided to reorient myself in the web development, because I need a completely different environment from the previous one but it's also necessary that this environment keeps me in constant intelectuelle awakening in order to avoid monotony. So I followed the formation of the wagon, in which i had the best training experience and because of that, i knew i wanted to work in this new environment. I keep a great sporting sensitivity i practice a lot of cycling, climbing, running and trekking. This new balance allows me to perform well in my professional life</p>
       <br>
-      <%= link_to "Home", root_path, class: "btn btn-menu" %>
+      <%= link_to "back to home", root_path, class: "btn btn-menu" %>
       <br>
       <br>
       <br>
-      <%= link_to "Myxp", experience_path, class: "btn btn-menu" %>
+      <%= link_to "My experience", experience_path, class: "btn btn-menu" %>
       <br>
       <br>
       <br>
-      <%= link_to "Mycertif", certification_path, class: "btn btn-menu" %>
+      <%= link_to "My certifications", certification_path, class: "btn btn-menu" %>
   </div>
 </div>
 
