--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title> Geektou - Portfolio</title>
     <style type="text/css">
+      @media (max-width: 768px) {
+        .section-title {
+          text-align: center;
+          padding-right: 0;
+          padding-top: 20px;
+        }
+      }
+S
+
+      @media (max-width: 992px) {
+        .section-header .info-container .info-socials {
+        }
+      }
+
+      @media (max-width: 768px) {
+        .section-curriculum .bg-left-col{
+        }
+      }
+
+
     </style>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
