--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,12 @@
           padding-top: 20px;
         }
       }
-S
+
+      @media (max-width: 992px) {
+        .section-header .info-container .info-name {
+
+        }
+      }
 
       @media (max-width: 992px) {
         .section-header .info-container .info-socials {
