--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,12 @@
         }
       }
 
+/*            @media (max-width: 992px) {
+        .section-header .info-container .flexbox {
+
+        }
+      }*/
+
       @media (max-width: 992px) {
         .section-header .info-container .info-socials {
         }
