--- a/app/assets/stylesheets/components/_section.scss
+++ b/app/assets/stylesheets/components/_section.scss
@@ -11,7 +11,7 @@
 .section-header .info-container {
   position: relative;
   padding: 1.75rem 1.75rem 0rem;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
 }
 
@@ -68,78 +68,7 @@
   color: #e00d0d;
 }
 
-// .section-header .info-container hr{
-//   margin-top: 10px;
-//   height: 2px;
-//   background: #404242;
-// }
-
 hr {
   width: 80vw;
 }
 
-// /* section cv
-// */
-// .section-curriculum {
-//   position: relative;
-//   height: 400px;
-// }
-
-// .section-curriculum .bg-left-col {
-//   padding: 60px 0px 60px 40px;
-// }
-
-// .section-curriculum .timeline-container {
-//   border-left-width: 2px;
-//   border-left-style: solid;
-//   margin-left: calc(1rem - 2px);
-//   padding-left: 25px;
-//   position: relative;
-//   border-color: #404042;
-// }
-
-// .section-curriculum .timeline-item {
-//   width: 100%;
-//   padding-right: 15px;
-//   padding-left: 15px;
-//   margin-bottom: 1.2rem;
-//   position: relative;
-//   font-weight: 500;
-// }
-// .section-curriculum .timeline-item .timeline-point {
-//   background: #e00d0d;
-//   height:10px ;
-//   width: 10px;
-//   position: absolute;
-//   left: -31px;
-//   top: 3px;
-//   border-radius: 50%;
-// }
-
-// .section-curriculum .timeline-item .timeframe,
-// .section-curriculum .timeline-item .location {
-//   opacity: 0.6;
-//   font-size: 0.7rem;
-//   margin-bottom: 0.4rem;
-// }
-
-// .section-curriculum .timeline-item .heading {
-//   margin-bottom: 0.4rem;
-//   font-size: 1.2rem;
-//   line-height: 1.45;
-//   font-weight: 600;
-//   color: #a4a5a6;
-//   text-transform: uppercase;
-// }
-
-// .section-curriculum .timeline-item .title {
-//   font-size: 0.8rem;
-//   color: #a4a5a6;
-//   margin-bottom: 0.4rem;
-// }
-
-// .section-curriculum .timeline-item .col {
-//   font-size:0.8rem ;
-//   margin-bottom: 0.55rem;
-//   margin-top: 1rem;
-// }
