patch 1 for finalquote

--- a/app/assets/stylesheets/components/_finalquote.scss
+++ b/app/assets/stylesheets/components/_finalquote.scss
@@ -3,4 +3,17 @@
   color: red;
   font-size: 30px;
   margin-top: 15px;
+  bottom: 0;
+  right: 0;
+}
+
+
+
+// .finalquote span {
+//   position: absolute;
+//   bottom: 0;
+// }
+
+.align-items {
+  min-height: 1300px;
 }
