--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,10 @@
         }
       }
 
+      @media (min-height: 1491px){
+        .align-items
+      }
+
 /*            @media (max-width: 992px) {
         .section-header .info-container .flexbox {
 
