patching responsive about

--- a/app/assets/stylesheets/components/_finalquote.scss
+++ b/app/assets/stylesheets/components/_finalquote.scss
@@ -2,9 +2,8 @@
   margin-bottom: 45px;
   color: red;
   font-size: 30px;
-  margin-top: 15px;
-  bottom: 0;
-  right: 0;
+  margin-top: 150px;
+  min-width: 600px;
 }
 
 
@@ -15,5 +14,5 @@
 // }
 
 .align-items {
-  min-height: 1300px;
+  min-height: 1200px;
 }
