--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -12,6 +12,8 @@
   margin-left: 25vw;
   margin-right: 25vw;
   justify-content: space-between;
+  min-width: 250px;
+  min-height: 1400px;
 }
 .about h1 {
   color: red;
