--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="background-color: black;">
+<div class="container" style="background-color: black; min-width: 400px; min-height: 1450px;">
   <div class="about">
     <h1>More about me</h1>
     <br>
