responsive mobile done

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -9,8 +9,8 @@
   background-color: #1b1b1c;
   height: 95vh;
   text-align: center;
-  margin-left: 25vw;
-  margin-right: 25vw;
+  margin-left: 200px;
+  margin-right: 200px;
   justify-content: space-between;
   min-width: 250px;
   min-height: 1400px;
@@ -23,13 +23,9 @@
   color: white;
 }
 
-.container-certification {
-  background-color: #1b1b1c;
-  height: 40vh;
-}
 
 .container-experience {
-  margin-top: -5px;
+  margin-top: 45px;
   background-color: #1b1b1c;
   height: 40vh;
 }
