--- a/app/views/pages/certification.html.erb
+++ b/app/views/pages/certification.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="background-color: #1b1b1c;">
+<div class="container" style="background-color: #1b1b1c; min-height: 1000px;">
   <div style="color: red;"><h1>My certifications</h1></div>
   <div class="container-certification">
     <div class="certification-item">
