--- a/app/views/pages/experience.html.erb
+++ b/app/views/pages/experience.html.erb
@@ -1,9 +1,9 @@
-<div class="container" style="background-color: #1b1b1c;">
+<div class="container" style="background-color: #1b1b1c; min-height: 1000px;">
   <div style="color: red;"><h1>My expriences</h1></div>
   <div class="container-experience">
     <div class="experience-item">
       <div class="experience-point"></div>
-      <div class="row">
+      <div class="row"">
         <div class="col-md-5">
           <div class="timeframe">2018</div>
           <div class="heading">fortalezalejeu</div>
@@ -22,7 +22,7 @@
     <br>
     <div class="experience-item">
       <div class="experience-point"></div>
-      <div class="row">
+      <div class="row"">
         <div class="col-md-5">
           <div class="timeframe">2018</div>
           <div class="heading">LeWagon</div>
