--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,8 +17,8 @@
           <div class="deadpool"></div>
         </div>
       </div>
-      <div class="row align-items" style="background-color: #1b1b1c">
-        <div class="info-container">
+      <div class="row align-items" style="background-color: #1b1b1c;">
+        <div class="info-container" style="text-align: center;">
           <h1 class="info-name">
             <div class="first-name">Guillaume</div>
             <div class="last-name">Dauplat</div>
