--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,12 +23,6 @@
         .align-items
       }
 
-/*            @media (max-width: 992px) {
-        .section-header .info-container .flexbox {
-
-        }
-      }*/
-
       @media (max-width: 992px) {
         .section-header .info-container .info-socials {
         }
@@ -44,6 +38,8 @@
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= favicon_link_tag asset_path('favicon.ico'), :rel => 'icon', :type =>  'image/png' %>
+
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
   </head>
   <body>
