page about nicer?

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,11 @@
-<div class="container" style="background-color: black; min-width: 700px; min-height: 1500px;">
+<div class="container" style="background-color: #1b1b1c; min-height: 1025px;">
   <div class="about">
+    <div class="col-md-offset-4 col-md-4">
     <h1>More about me</h1>
     <br>
-    <p>My life has always been sport-driven since I was 10 years old, so my professional life has naturally focused on the sport, I have graduated as a sports educator in Aix-en-Provence. After a few years in the south of france i moved to switzerland where i worked for the campus of the nations and the canton of Geneva as a track and field referent for 2 years. when i came back to france i took the direction of the athletics section of the smuc for 2 years, it allows me to realize that i needed something new in my life. So I decided to reorient myself in the web development, because I need a completely different environment from the previous one but it's also necessary that this environment keeps me in constant intelectuelle awakening in order to avoid monotony. So I followed the formation of the wagon, in which i had the best training experience and because of that, i knew i wanted to work in this new environment. I keep a great sporting sensitivity i practice a lot of cycling, climbing, running and trekking. This new balance allows me to perform well in my professional life</p>
+      <p>My life has always been sport-driven since I was 10 years old, so my professional life has naturally focused on the sport, I have graduated as a sports educator in Aix-en-Provence. After a few years in the south of france i moved to switzerland where i worked for the campus of the nations and the canton of Geneva as a track and field referent for 2 years. when i came back to france i took the direction of the athletics section of the smuc for 2 years, it allows me to realize that i needed something new in my life. So I decided to reorient myself in the web development, because I need a completely different environment from the previous one but it's also necessary that this environment keeps me in constant intelectuelle awakening in order to avoid monotony. So I followed the formation of the wagon, in which i had the best training experience and because of that, i knew i wanted to work in this new environment. I keep a great sporting sensitivity i practice a lot of cycling, climbing, running and trekking. This new balance allows me to perform well in my professional life</p>
+    </div>
+    <div class="col-md-12">
       <br>
       <%= link_to "back to home", root_path, class: "btn btn-menu" %>
       <br>
@@ -13,6 +16,7 @@
       <br>
       <br>
       <%= link_to "My certifications", certification_path, class: "btn btn-menu" %>
+    </div>
   </div>
 </div>
 
