--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -9,11 +9,11 @@
   background-color: #1b1b1c;
   height: 95vh;
   text-align: center;
-  margin-left: 200px;
-  margin-right: 200px;
+  // margin-left: 200px;
+  // margin-right: 200px;
   justify-content: space-between;
   min-width: 250px;
-  min-height: 1400px;
+  min-height: 1000px;
 }
 .about h1 {
   color: red;
