test ecran mini phone3

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="background-color: #1b1b1c; min-height: 1225px;">
+<div class="container" style="background-color: #1b1b1c; min-height: 1125px; min-width: 390px;">
   <div class="about">
     <div class="col-md-offset-4 col-md-4">
     <h1>More about me</h1>
