--- a/app/assets/stylesheets/components/_section.scss
+++ b/app/assets/stylesheets/components/_section.scss
@@ -13,8 +13,9 @@
   padding: 1.75rem 1.75rem 0rem;
   width: 100vw;
   height: 100vh;
-  margin: 0 auto;
-  display: table;
+  // margin: 0 auto;
+  // display: table;
+  // min-width: 620px;
 }
 
 // h1 {
