--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="row align-items" style="background-color: #1b1b1c;">
-        <div class="info-container" style="text-align: center; min-width: 620px;">
+        <div class="info-container" style="text-align: center;">
           <h1 class="info-name">
             <div class="first-name">Guillaume</div>
             <div class="last-name">Dauplat</div>
