hidden field for curious people

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,9 @@
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
   </head>
   <body>
+      <noscript>
+        hello dear viewer(s), recruiter(s), since you've open my inspector i can tell you are interested (at least a bit interested) in me. you'll be pleased to know that i'm always on for a good experience! so feel free to contact me! kiss, hug, love.. well whatever, enjoy my website :D
+      </noscript>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
