aajx to ajax in experiences

--- a/app/views/pages/experience.html.erb
+++ b/app/views/pages/experience.html.erb
@@ -32,7 +32,7 @@
         <div class="col">
           "leader of the Urbantraining project, allowing to visit the city while playing sports.
           <br/>
-          Ruby, RoR, CSS, HTML, JavaScript, Aajx, jQuery, Heroku"
+          Ruby, RoR, CSS, HTML, JavaScript, Ajax, jQuery, Heroku"
         </div>
       </div>
     </div>
