--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,13 +35,13 @@
               <span aria-hidden="true" class="fab fa-facebook"></span>
             </a>
           </div>
-          <a class="js-scrollTo link-white"  href="#page-1">Click me if you are lazy to scroll</a>
+          <a class="js-scrollTo link-white"  href="#page-1">Click me if you are too lazy to scroll</a>
           <hr>
           <div id="page-1">
             <div class="row">
               <div class="flexbox">
                 <div class="col-xs-12 col-sm-4">
-                  <div class="aboutme">Click here if u want to know more about me, because "all the dinosaurs feared the T-REX"</div>
+                  <div class="aboutme">Click here if you want to know more about me, because "all the dinosaurs feared the T-REX"</div>
                     <%= link_to "more about me", about_path, class: "btn btn-menu btn-mg-top" %>
                   <div class="vl"></div>
                 </div>
@@ -51,7 +51,7 @@
                   <div class="vl"></div>
                 </div>
                 <div class="col-xs-12 col-sm-4">
-                  <div class="certifications">if you are interested you can see my certifications here "He got Ajax from the dish soap!"</div>
+                  <div class="certifications">whenever you want to see my certification click below "He got Ajax from the dish soap!"</div>
                     <%= link_to "My certifications", certification_path, class: "btn btn-menu btn-mg-top" %>
                 </div>
               </div>
