--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -51,7 +51,7 @@
                   <div class="vl"></div>
                 </div>
                 <div class="col-xs-12 col-sm-4">
-                  <div class="certifications">whenever you want to see my certification click below "He got Ajax from the dish soap!"</div>
+                  <div class="certifications">Whenever you want to see my certifications click below "He got Ajax from the dish soap!"</div>
                     <%= link_to "My certifications", certification_path, class: "btn btn-menu btn-mg-top" %>
                 </div>
               </div>
