capitalize + copyright on jokes

--- a/app/assets/stylesheets/components/_section.scss
+++ b/app/assets/stylesheets/components/_section.scss
@@ -30,7 +30,7 @@
 }
 
 .section-header .info-container .info-name .first-name {
-  text-transform: lowercase;
+  text-transform: capitalize;
   font-weight: 200;
   color: #e00813;
 }
