--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,7 @@
       <div class="row align-items" style="background-color: #1b1b1c;">
         <div class="info-container" style="text-align: center;">
           <h1 class="info-name">
-            <div class="first-name">Guillaume</div>
+            <div class="first-name">guillaume</div>
             <div class="last-name">Dauplat</div>
           </h1>
           <div class="info-title">Full-stack Web Developer</div>
@@ -56,7 +56,7 @@
                 </div>
               </div>
             </div>
-            <div class="finalquote">"Listen my fellow viewer, if I never see you again, I want you to know that I love you very much. I also buried 1,600 kilos of cocaine somewhere in my apartment -- right next to the cure for blindness. Good luck."</div>
+            <div class="finalquote">"Listen my fellow viewer, if I never see you again, I want you to know that I love you very much. I also buried 1,600 kilos of cocaine somewhere in my apartment -- right next to the cure for blindness. Good luck." every single jokes are <i class="far fa-copyright"></i> by Wade WILSON</div>
           </div>
         </div>
       </div>
