add codewars social

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,6 +34,9 @@
             <a href="https://www.facebook.com/guillaume.freaks" target="_blank" rel="noopener noreferrer">
               <span aria-hidden="true" class="fab fa-facebook"></span>
             </a>
+            <a href="https://www.codewars.com/users/g33ktou" target="_blank" rel="noopener noreferrer">
+              <span aria-hidden="true" class="fas fa-code"></span>
+            </a>
           </div>
           <a class="js-scrollTo link-white"  href="#page-1">Click me if you are too lazy to scroll</a>
           <hr>
