adding TA in experience

--- a/app/views/pages/experience.html.erb
+++ b/app/views/pages/experience.html.erb
@@ -39,6 +39,22 @@
     <br>
     <br>
     <br>
+      <div class="experience-item">
+        <div class="experience-point"></div>
+        <div class="row"">
+          <div class="col-md-5">
+            <div class="timeframe">2019</div>
+            <div class="heading">LeWagon</div>
+            <div class="title">Teacher Assistant</div>
+            <div class="location">Marseille, France</div>
+          </div>
+          <div class="col">
+            "Teacher assistant for the batch #212.
+            <br/>
+            Ruby, Regex and parsing specialisation"
+          </div>
+        </div>
+      </div>
       <%= link_to "back to home", root_path, class: "btn btn-menu" %>
       <%= link_to "more about me", about_path, class: "btn btn-menu" %>
       <%= link_to "my certifications", certification_path, class: "btn btn-menu" %>
