--- a/app/views/pages/certification.html.erb
+++ b/app/views/pages/certification.html.erb
@@ -7,7 +7,7 @@
         <div class="col-md-5">
           <div class="timeframe">2018</div>
           <div class="heading">LeWagon</div>
-          <div class="title">Full-stack Developer</div>
+          <div class="title">Full-stack Developer/Licence in web application developer</div>
           <div class="location">Marseille, France</div>
         </div>
         <div class="col">
